# neuton-silabs-xg24-ble-remotecontrol

./: .gitattributes  .gitignore  LICENSE  README.md
neuton-silabs-xg24-ble-remotectrl/neuton_lib/: CMakeLists.txt  README.md
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton/: CMakeLists.txt
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton/include/neuton/: neuton.h  neuton_common_types.h  neuton_debug.h  neuton_platform.h  neuton_types.h  neuton_version.h
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton/include/neuton/dsp/: neuton_dsp.h  neuton_dsp_fast_math.h  neuton_dsp_pipeline.h  neuton_dsp_spectral.h  neuton_dsp_statistic.h  neuton_dsp_support.h  neuton_dsp_transform.h  neuton_dsp_types.h
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton/include/neuton/dsp/pipeline/: neuton_dsp_pipeline_spectr.h  neuton_dsp_pipeline_stat.h  neuton_dsp_pipeline_types.h
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton/include/neuton/dsp/spectral/: neuton_dsp_findpeaks.h
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton/include/neuton/dsp/statistic/: neuton_dsp_absmax.h  (+24 more)
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton/include/neuton/nn/: neuton_nn.h
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton/include/neuton/utils/: neuton_ordered_window.h  neuton_osl_window.h  neuton_sliding_window.h  neuton_utils.h
neuton-silabs-xg24-ble-remotectrl/neuton_lib/neuton_generated/: README.md  neuton_user_config.h  neuton_user_data_prep_config.h  neuton_user_data_prep_meta.inc  neuton_user_model.inc  neuton_user_model_config.h  neuton_user_types.h
(+53 files in other folders)
